[package]
name = "jlox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = { version = "0.24.3" }
multipeek = { version = "0.1.2" }
graphviz-rust = { version = "0.6.1" }
clap = { version = "4.1.8" }
